impl `GET file-content` api for ragit-server
